--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   "license": "ISC",
   "devDependencies": {
     "gulp": "^4.0.2",
+    "gulp-sass": "^4.0.2",
+    "node-sass": "^4.12.0",
+    "sass": "^1.23.0",
     "source-map": "^0.7.3",
-    "ts-loader": "^6.1.2",
+    "ts-loader": "^6.2.0",
     "typescript": "^3.6.3",
-    "webpack": "^4.40.2",
+    "webpack": "^4.41.0",
     "webpack-stream": "^5.2.1"
   }
 }
